--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -73,6 +73,8 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_margin="24dp"
+        app:backgroundColor="@color/colorPrimary"
+        app:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
